After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666890 - [0.11] controller compiler warning: gsttriggercontrolsource.c:82: control reaches end of non-void function
[0.11] controller compiler warning: gsttriggercontrolsource.c:82: control rea...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
0.11.x
Other All
: Normal major
: 0.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-12-27 03:13 UTC by Matej Knopp
Modified: 2011-12-27 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matej Knopp 2011-12-27 03:13:00 UTC
gsttriggercontrolsource.c:63: warning: type qualifiers ignored on function return type
gsttriggercontrolsource.c: In function '_interpolate_trigger':
gsttriggercontrolsource.c:82: warning: control reaches end of non-void function
cc1: warnings being treated as errors
gstinterpolationcontrolsource.c:54: warning: type qualifiers ignored on function return type
cc1: warnings being treated as errors

I'd submit patch but I don't know what the default behavior should be (when !found)
Comment 1 Matej Knopp 2011-12-27 03:14:22 UTC
Also:
gstinterpolationcontrolsource.c:54: warning: type qualifiers ignored on function return type
Comment 2 Tim-Philipp Müller 2011-12-27 11:44:18 UTC
Not sure what the right fix is either. I've quick-fixed it for now so it doesn't break the build, and then stefan can fix it properly whenever he gets around to it.

commit 63caa628c4582f26b1507a24574c6f2f85fdf613
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Dec 27 11:40:40 2011 +0000

    controller: quick-fix compiler warning breaking the build    
    This is likely not the proper fix.
    https://bugzilla.gnome.org/show_bug.cgi?id=666890

commit e65ac5b41953322e7512bedfdea7b2a0836d3ccc
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Dec 27 11:24:48 2011 +0000

    controller: fix compiler warning in interpolation control source

    gstinterpolationcontrolsource.c:54: warning: type qualifiers ignored
    on function return type
    
    https://bugzilla.gnome.org/show_bug.cgi?id=666890
Comment 3 Stefan Sauer (gstreamer, gtkdoc dev) 2011-12-27 12:51:07 UTC
commit 855212cd2f890652791b18a43fcfe61779b8c2b6
Author: Stefan Sauer <ensonic@users.sf.net>
Date:   Tue Dec 27 13:48:36 2011 +0100

    triggercontrolsource: fix control reaches end of non-void function
    
    Return NAN and check the value further up.
    Fixes #666890
Comment 4 Matej Knopp 2011-12-27 13:25:03 UTC
Stafan, FP_NAN is not a NAN constant. It is an integer error code. Also isnan is C99. See 
https://bugzilla.gnome.org/show_bug.cgi?id=666887
for more details